...
                noticia?.let { it ->
                    Column(
                        modifier = Modifier
                            .fillMaxSize()
                            .padding(top = 50.dp)
                            .verticalScroll(rememberScrollState())
                            .testTag("noticia-detalle")
                    ) {
                        var cargandoImagen by remember { mutableStateOf(true) }

                        Box(
                            modifier = Modifier
                                .fillMaxWidth()
...
